k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
